forgot to git add index.html file

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" type="text/css"> 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"type="text/css"> 
     <link rel="stylesheet" href="assets/style.css" type="text/css"/>
-    
+
     <title>studiofettle mind & body studio</title>
 </head>
 <div class="row">
-<div class="col-md-6">
+<a href="index.html" class="col-md-6 logo">
 </div>
 <div class="col-md-6">
 </div>
