no specific changes

--- a/index.html
+++ b/index.html
@@ -10,13 +10,19 @@
 
     <title>studiofettle mind & body studio</title>
 </head>
-<div class="row">
-<a href="index.html" class="col-md-6 logo">
-</div>
-<div class="col-md-6">
-</div>
+
 <body>
-<header></header>
+<header>
+<div class="row">
+<a href="index.html" class="col-md-6 logo"></a>
+<div class="col-md-6">
+<div class="row bg-color-navbar">
+<div class="col heading">
+<h1>Navbar</h1>
+</div>
+</div>
+</header>
+
     <section></section>
         <footer></footer>
 </body>
