--- a/index.html
+++ b/index.html
@@ -12,19 +12,20 @@
 </head>
 
 <body>
+
 <header>
+
 <div class="row">
-<a href="index.html" class="col-md-4 logo"></a>
-<div class="col-md-8">
-<div class="row bg-color-navbar">
-<div class="col heading">
-<nav>
+<a href="index.html" class="col-md-6 logo"></a>
+<div class="col-md-6">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
  <ul>
     <li><a href="#">Home</a></li>
     <li><a href="#">Meet the team</a></li>
     <li><a href="#">Contact us</a></li>
  </ul>
  </nav>
+</div>
 </div>
 </div>
 </header>
