--- a/index.html
+++ b/index.html
@@ -18,13 +18,19 @@
 <div class="row">
 <a href="index.html" class="col-md-6 logo"></a>
 <div class="col-md-6">
+<div class="col heading">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
- <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">Meet the team</a></li>
-    <li><a href="#">Contact us</a></li>
- </ul>
- </nav>
+<div class="row">
+ <div class="col">
+<ul id="nav" class="list-inline">
+    <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item">
+    <a href="#"><span>Home</span></a></li>
+    <li class="col-6 col-sm-3 ui-menu-color-meet-the-team list-inline-item">
+    <a href="#"><span>Meet the team</span></a></li>
+    <li class="col-6 col-sm-3 ui-menu-color-contact-us list-inline-item">
+    <a href="#"><span>Contact Us</span></a></li>
+    </ul>
+</div>
 </div>
 </div>
 </div>
@@ -39,6 +45,7 @@
 </div>
 </div>
     </section>
+
 
 <section id="about us">
 <div class="row">
