--- a/index.html
+++ b/index.html
@@ -46,6 +46,20 @@
 </div>
     </section>
 
+    <section id="images">
+    <div class="container">
+    <div class="row">
+    <div class="column">
+    <img src="assets/images/studio-massage image.jpg" alt="massage" style="width:100%"/></div>
+    <div class="column">
+    <img src="assets/images/studio-massage image.jpg" alt="massage" style="width:100%"/></div>
+    <div class="column">
+    <img src="assets/images/studio-massage image.jpg" alt="massage" style="width:100%"/></div>
+    </div>
+</div>
+</div>
+    </section>
+
 
 <section id="about us">
 <div class="row">
