--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="column">
     <img src="assets/images/studio-massage image.jpg" alt="massage" style="width:100%"/></div>
     <div class="column">
-    <img src="assets/images/studio-massage image.jpg" alt="massage" style="width:100%"/></div>
+    <img src="assets/images/studio-yoga image.jpg" alt="yoga" style="width:100%"/></div>
     <div class="column">
     <img src="assets/images/studio-massage image.jpg" alt="massage" style="width:100%"/></div>
     </div>
@@ -65,9 +65,9 @@
 <div class="row">
 <div class="col-md-12">
       <h2>About Us</h2> 
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dictum fusce ut placerat orci nulla pellentesque dignissim enim sit. Erat imperdiet sed euismod nisi porta lorem mollis aliquam. Feugiat pretium nibh ipsum consequat nisl. Sed id semper risus in hendrerit gravida. Orci a scelerisque purus semper eget duis at tellus. Rhoncus dolor purus non enim. Est velit egestas dui id ornare arcu odio. Quisque sagittis purus sit amet volutpat consequat mauris. Luctus venenatis lectus magna fringilla urna porttitor rhoncus. Morbi tristique senectus et netus et malesuada fames ac. Sed lectus vestibulum mattis ullamcorper velit sed ullamcorper. Dignissim sodales ut eu sem integer vitae justo eget. Potenti nullam ac tortor vitae purus faucibus ornare suspendisse. Suspendisse faucibus interdum posuere lorem ipsum dolor sit amet. Fermentum iaculis eu non diam phasellus vestibulum. Sed vulputate odio ut enim. Fringilla ut morbi tincidunt augue interdum velit euismod in pellentesque. Mauris a diam maecenas sed enim ut sem viverra aliquet. Faucibus turpis in eu mi bibendum neque egestas congue quisque.
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 
-        Condimentum lacinia quis vel eros donec ac odio tempor orci. Diam ut venenatis tellus in metus vulputate eu. Non sodales neque sodales ut etiam sit amet nisl. Dolor purus non enim praesent elementum facilisis leo. Ultrices sagittis orci a scelerisque purus semper eget duis at. Odio euismod lacinia at quis risus sed vulputate odio ut. Quis lectus nulla at volutpat diam ut. Mauris in aliquam sem fringilla ut morbi. Tempus egestas sed sed risus pretium quam vulputate dignissim. Fames ac turpis egestas integer eget aliquet nibh praesent. </p>
+        Condimentum lacinia quis vel eros donec ac odio tempor orci. Diam ut venenatis tellus in metus vulputate eu. </p>
     </div>
     </div>
     </section>
@@ -84,8 +84,24 @@
     </section>
 
         <footer>
-        
-        
+             <div class="container">
+    <div class="row">
+    <div class="column">
+    <h4>Address</h4>
+       <p>Wilton Road, Humberston</p>
+       <p>NE Lincs, DN31 XXX</p>
+  </div>
+  <div class="column">
+    <h4>Contact Details</h4>
+    <p>Tel: 01472 xxxxxx</p>
+    <p>Email: studiofettle@info.co.uk</p>
+  </div>
+  <div class="column">
+    <h4>Social Media</h4>
+    <a href="#" class="fa fa-facebook">Facebook</a>
+  </div>
+</div>
+</div>
         </footer>
 
         <footer>copyright: vixwebdesigns.co.uk</footer>
