--- a/index.html
+++ b/index.html
@@ -73,15 +73,19 @@
     </section>
 
     <section id="testimonials">
-    <div class="row">
-    <div class="col-md-6">
-    <div class="col-md-6">
-      <h2>Testimonials</h2> 
-      <p>Vickie</p>
-      <p>Vickie</p>
-      </div>
-      </div>
+  <h2>Testimonials</h2>
+   <div class="row">
+  <div class="column">
+<p>Truly amazing</p>
+</div>
+<div class="column">
+<p>I feel alive</p>
+</div>
+</div>
     </section>
+
+</body> 
+    
 
         <footer>
              <div class="container">
