created 2 new html pages and linked all up

--- a/index.html
+++ b/index.html
@@ -24,16 +24,17 @@
  <div class="col">
 <ul id="nav" class="list-inline">
     <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item">
-    <a href="#"><span>Home</span></a></li>
-    <li class="col-6 col-sm-3 ui-menu-color-meet-the-team list-inline-item">
-    <a href="#"><span>Meet the team</span></a></li>
+    <a href="index.html"><span>Home</span></a></li>
+    <li class="col-6 col-sm-3 ui-menu-color-our-services list-inline-item">
+    <a href="our-services.html"><span>Our Services</span></a></li>
     <li class="col-6 col-sm-3 ui-menu-color-contact-us list-inline-item">
-    <a href="#"><span>Contact Us</span></a></li>
+    <a href="contact-us.html"><span>Contact Us</span></a></li>
     </ul>
 </div>
 </div>
 </div>
 </div>
+
 </header>
 
 <section id="title">
@@ -50,11 +51,11 @@
     <div class="container">
     <div class="row">
     <div class="column">
-    <img src="assets/images/studio-massage image.jpg" alt="massage" style="width:100%"/></div>
+    <img src="assets/images/studio-massage-image.jpg" alt="massage" style="width:100%"/></div>
     <div class="column">
-    <img src="assets/images/studio-yoga image.jpg" alt="yoga" style="width:100%"/></div>
+    <img src="assets/images/studio-yoga-image.jpg" alt="yoga" style="width:100%"/></div>
     <div class="column">
-    <img src="assets/images/studio-massage image.jpg" alt="massage" style="width:100%"/></div>
+    <img src="assets/images/studio-massage-image.jpg" alt="massage" style="width:100%"/></div>
     </div>
 </div>
 </div>
@@ -102,7 +103,7 @@
   </div>
   <div class="column">
     <h4>Social Media</h4>
-    <a href="#" class="fa fa-facebook">Facebook</a>
+    <a href="#" i class="fab fa-facebook-square">Facebook</i></a>
   </div>
 </div>
 </div>
