created testimonial section and used #id attribute for css

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 <body>
 
+<!-- Logo and Navbar -->
+
 <header>
 
 <div class="row">
@@ -23,11 +25,11 @@
 <div class="row">
  <div class="col">
 <ul id="nav" class="list-inline">
-    <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item">
+    <li class="col-6 col-sm-3 list-inline-item">
     <a href="index.html"><span>Home</span></a></li>
-    <li class="col-6 col-sm-3 ui-menu-color-our-services list-inline-item">
+    <li class="col-6 col-sm-3 list-inline-item">
     <a href="our-services.html"><span>Our Services</span></a></li>
-    <li class="col-6 col-sm-3 ui-menu-color-contact-us list-inline-item">
+    <li class="col-6 col-sm-3 list-inline-item">
     <a href="contact-us.html"><span>Contact Us</span></a></li>
     </ul>
 </div>
@@ -37,15 +39,19 @@
 
 </header>
 
+<!-- 1st section - company name -->
+
 <section id="title">
 <div class="row">
 <div class="col-md-12">
       <h1>Studiofettle - Mind & Body Studio</h1> 
       <h3>Fettle</h3>
-      <p>"meaning working order" and "optimal state of wellbeing"</p>
+      <p id="paragraph-size-specific">"meaning working order" and "optimal state of wellbeing"</p>
 </div>
 </div>
     </section>
+
+    <!-- 2nd section - company images -->
 
     <section id="images">
     <div class="container">
@@ -61,32 +67,47 @@
 </div>
     </section>
 
+<!-- 3rd section - About us -->
 
 <section id="about us">
 <div class="row">
 <div class="col-md-12">
       <h2>About Us</h2> 
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      <p id="about-us-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 
-        Condimentum lacinia quis vel eros donec ac odio tempor orci. Diam ut venenatis tellus in metus vulputate eu. </p>
+        Condimentum lacinia quis vel eros donec ac odio tempor orci. Diam ut venenatis tellus in metus vulputate eu. Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+        
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+
+        Condimentum lacinia quis vel eros donec ac odio tempor orci. Diam ut venenatis tellus in metus vulputate eu.</p>
     </div>
     </div>
     </section>
 
+    <!-- 4th section - Testimonials -->
+
     <section id="testimonials">
   <h2>Testimonials</h2>
    <div class="row">
-  <div class="column">
-<p>Truly amazing</p>
+  <div class="col-md-3">
+<p id=testimonials>Truly amazing - "I love the atmosphere at Studiofettle, it makes you feel happy whatever service you take"</p>
 </div>
-<div class="column">
-<p>I feel alive</p>
+<div class="col-md-3">
+<p>Image</p>
+</div>
+<div class="col-md-3">
+<p id=testimonials>I feel alive - "Everytime I leave from my PT session, I feel confident and full of energy"</p>
+</div>
+<div class="col-md-3">
+<p>Image</p>
+</div>
 </div>
 </div>
     </section>
 
 </body> 
-    
+   
+<!-- Footer - Contact details -->
 
         <footer>
              <div class="container">
