added sections to our-services.html

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 <div class="col heading">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 <div class="row">
- <div class="col">
+<div class="col">
 <ul id="nav" class="list-inline">
-    <li class="col-6 col-sm-3 list-inline-item">
+   <li class="col-6 col-sm-3 list-inline-item">
     <a href="index.html"><span>Home</span></a></li>
     <li class="col-6 col-sm-3 list-inline-item">
     <a href="our-services.html"><span>Our Services</span></a></li>
@@ -90,13 +90,13 @@
   <h2>Testimonials</h2>
    <div class="row">
   <div class="col-md-3">
-<p id=testimonials>Truly amazing - "I love the atmosphere at Studiofettle, it makes you feel happy whatever service you take"</p>
+<p id=testimonials>Jess: Truly amazing - "I love the atmosphere at Studiofettle, it makes you feel happy whatever service you take"</p>
 </div>
 <div class="col-md-3">
 <p>Image</p>
 </div>
 <div class="col-md-3">
-<p id=testimonials>I feel alive - "Everytime I leave from my PT session, I feel confident and full of energy"</p>
+<p id=testimonials>Sharon: I feel alive - "Everytime I leave from my PT session, I feel confident and full of energy"</p>
 </div>
 <div class="col-md-3">
 <p>Image</p>
@@ -109,8 +109,8 @@
    
 <!-- Footer - Contact details -->
 
-        <footer>
-             <div class="container">
+<footer>
+    <div class="container">
     <div class="row">
     <div class="column">
     <h4>Address</h4>
