--- a/our-services.html
+++ b/our-services.html
@@ -13,6 +13,8 @@
 
 <body>
 
+<!-- Logo and Navbar -->
+
 <header>
 
 <div class="row">
@@ -21,13 +23,13 @@
 <div class="col heading">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 <div class="row">
- <div class="col">
+<div class="col">
 <ul id="nav" class="list-inline">
-    <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item">
+   <li class="col-6 col-sm-3 list-inline-item">
     <a href="index.html"><span>Home</span></a></li>
-    <li class="col-6 col-sm-3 ui-menu-color-our-services list-inline-item">
+    <li class="col-6 col-sm-3 list-inline-item">
     <a href="our-services.html"><span>Our Services</span></a></li>
-    <li class="col-6 col-sm-3 ui-menu-color-contact-us list-inline-item">
+    <li class="col-6 col-sm-3 list-inline-item">
     <a href="contact-us.html"><span>Contact Us</span></a></li>
     </ul>
 </div>
@@ -36,3 +38,74 @@
 </div>
 
 </header>
+
+<!-- 1st section - company name -->
+
+<section id="title">
+<div class="row">
+<div class="col-md-12">
+      <h1>Studiofettle - Mind & Body Studio</h1> 
+      <h3>Fettle</h3>
+      <p id="paragraph-size-specific">"meaning working order" and "optimal state of wellbeing"</p>
+</div>
+</div>
+    </section>
+
+    <!-- 1st section - Proprietor Bio -->
+
+<section id="Bio">
+  <h2>Proprietor Bio</h2>
+   <div class="row">
+  <div class="col-md-6">
+<p>Rachael, owner of Studiofettle. Health and wellbeing. Rachael, owner of Studiofettle. Health and wellbeing. Rachael, owner of Studiofettle. Health and wellbeing.</p>
+</div>
+<div class="col-md-6">
+<p>Image</p>
+</div>
+</div>
+    </section>
+
+    <!-- 2nd section - services - row 1 -->
+
+  <section id="Services">
+  <h2>Our Services</h2>
+   <div class="row">
+  <div class="col-md-3">
+<p id=services>Studiofettle Personal Training</p>
+</div>
+<div class="col-md-3">
+<p>Image</p>
+</div>
+<div class="col-md-3">
+<p id=services>Yoga Moves</p>
+</div>
+<div class="col-md-3">
+<p>Image</p>
+</div>
+</div>
+
+<!-- 2nd section - services - row 1 -->
+
+<div class="row">
+<div class="col-md-3">
+<p id=services>Genevieve Pilates</p>
+</div>
+<div class="col-md-3">
+<p>Image</p>
+</div>
+<div class="col-md-3">
+<p id=services>Massage Therapy</p>
+</div>
+<div class="col-md-3">
+<p>Image</p>
+</div>
+</div>
+    </section>  
+
+    <!-- Footer - Contact details -->
+
+<footer></footer>
+
+        <footer>copyright: vixwebdesigns.co.uk</footer>
+</body>
+</html>
