--- a/contact-us.html
+++ b/contact-us.html
@@ -13,6 +13,8 @@
 
 <body>
 
+<!-- Logo and Navbar -->
+
 <header>
 
 <div class="row">
@@ -21,13 +23,13 @@
 <div class="col heading">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 <div class="row">
- <div class="col">
+<div class="col">
 <ul id="nav" class="list-inline">
-    <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item">
+   <li class="col-6 col-sm-3 list-inline-item">
     <a href="index.html"><span>Home</span></a></li>
-    <li class="col-6 col-sm-3 ui-menu-color-our-services list-inline-item">
+    <li class="col-6 col-sm-3 list-inline-item">
     <a href="our-services.html"><span>Our Services</span></a></li>
-    <li class="col-6 col-sm-3 ui-menu-color-contact-us list-inline-item">
+    <li class="col-6 col-sm-3 list-inline-item">
     <a href="contact-us.html"><span>Contact Us</span></a></li>
     </ul>
 </div>
@@ -36,3 +38,15 @@
 </div>
 
 </header>
+
+<!-- 1st section - company name -->
+
+<section id="title">
+<div class="row">
+<div class="col-md-12">
+      <h1>Studiofettle - Mind & Body Studio</h1> 
+      <h3>Fettle</h3>
+      <p id="paragraph-size-specific">"meaning working order" and "optimal state of wellbeing"</p>
+</div>
+</div>
+    </section>
