--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" type="text/css"> 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"type="text/css"> 
-    <link rel="stylesheet" href="assets/style.css" type="text/css"/>
+
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+<link rel="stylesheet" href="assets/style.css" type="text/css">
 
     <title>studiofettle mind & body studio</title>
 </head>
@@ -16,7 +17,7 @@
 <!-- Logo and Navbar -->
 
 <header>
-
+<div class="container">
 <div class="row">
 <a href="index.html" class="col-md-6 logo"></a>
 <div class="col-md-6">
@@ -124,7 +125,7 @@
   </div>
   <div class="column">
     <h4>Social Media</h4>
-    <a href="https://en-gb.facebook.com/" i class="fab fa-facebook-square">Facebook</i></a>
+    <a href="https://www.facebook.com/studiofettle/" i class="fab fa-facebook-square"></i></a>
   </div>
 </div>
 </div>
