added some jsscripts from bootstrap

--- a/index.html
+++ b/index.html
@@ -132,5 +132,10 @@
         </footer>
 
         <footer>copyright: vixwebdesigns.co.uk</footer>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
 </body>
 </html>
