testing contact page navbar

--- a/contact-us.html
+++ b/contact-us.html
@@ -16,26 +16,30 @@
 <!-- Logo and Navbar -->
 
 <header>
-
+<div class="container">
 <div class="row">
 <a href="index.html" class="col-md-6 logo"></a>
 <div class="col-md-6">
 <div class="col heading">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-<div class="row">
-<div class="col">
-<ul id="nav" class="list-inline">
-   <li class="col-6 col-sm-3 list-inline-item">
-    <a href="index.html"><span>Home</span></a></li>
-    <li class="col-6 col-sm-3 list-inline-item">
-    <a href="our-services.html"><span>Our Services</span></a></li>
-    <li class="col-6 col-sm-3 list-inline-item">
-    <a href="contact-us.html"><span>Contact Us</span></a></li>
-    </ul>
-</div>
-</div>
-</div>
-</div>
+  <a class="navbar-brand" href="#">Studiofettle</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Our Services</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Contact Us</a>
+      </li>
+         </ul>
+  </div>
+</nav>
 
 </header>
 
