--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   </div>
   <div class="column">
     <h4>Social Media</h4>
-    <a href="https://www.facebook.com/studiofettle/" i class="fab fa-facebook-square"></i></a>
+    <a href="https://www.facebook.com/studiofettle/" i class="fab fa-facebook-square" style="font-size:48px"></i></a>
   </div>
 </div>
 </div>
