added bootstrap class img thumbnail to images

--- a/join-us.html
+++ b/join-us.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+    
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -56,8 +56,7 @@
 </div>
     </section>
 
-    <!-- 2nd section - company images -->
-<section id="images">
+    <section id="images">
     <div class="container">
     <div class="row">
     <div class="column">
@@ -71,46 +70,10 @@
 </div>
     </section>
 
-<!-- 3rd section - About us -->
+<!-- Join Us - Call to action form -->
 
-<section id="about us">
-<div class="row">
-<div class="col-md-12">
-      <h2>About Us</h2> 
-      <p id="about-us-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 
-        Condimentum lacinia quis vel eros donec ac odio tempor orci. Diam ut venenatis tellus in metus vulputate eu. Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-        
-        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-
-        Condimentum lacinia quis vel eros donec ac odio tempor orci. Diam ut venenatis tellus in metus vulputate eu.</p>
-    </div>
-    </div>
-    </section>
-
-    <!-- 4th section - Testimonials -->
-
-    <section id="testimonials">
-  <h2>Testimonials</h2>
-   <div class="row">
-  <div class="col-md-3">
-<p id="testimonials">Jess: Truly amazing - "I love the atmosphere at Studiofettle, it makes you feel happy whatever service you take"</p>
-</div>
-<div class="col-md-3">
-<p>Image</p>
-</div>
-<div class="col-md-3">
-<p id="testimonials">Sharon: I feel alive - "Everytime I leave from my PT session, I feel confident and full of energy"</p>
-</div>
-<div class="col-md-3">
-<p>Image</p>
-</div>
-</div>
-</div>
-    </section>
-
-</body> 
-   
+  
 <!-- Footer - Contact details -->
 
 <footer>
