added proprietor image, updated positive messages

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="column">
     <img src="assets/images/studio-yoga-image.jpg" alt="yoga" style="width:100%" class="img-thumbnail"/></div>
     <div class="column">
-    <img src="assets/images/studio-massage-image.jpg" alt="massage" style="width:100%" class="img-thumbnail"/></div>
+    <img src="assets/images/studio-counselling-room-image.jpg" alt="counselling" style="width:100%" class="img-thumbnail"/></div>
     </div>
 </div>
 </div>
