--- a/our-services.html
+++ b/our-services.html
@@ -50,8 +50,8 @@
 <div class="row">
 <div class="col-md-12">
       <h1>Studiofettle - Mind & Body Studio</h1> 
-      <h3>Fettle</h3>
-      <p id="paragraph-size-specific">"meaning working order" and "optimal state of wellbeing"</p>
+      <h3>Time for you</h3>
+      <p id="paragraph-size-specific">"take time to rest your mind" and "care for your body"</p>
 </div>
 </div>
     </section>
@@ -67,7 +67,7 @@
     <div class="column">
     <img src="assets/images/studio-yoga-image.jpg" alt="yoga" style="width:100%" class="img-thumbnail"/></div>
     <div class="column">
-    <img src="assets/images/studio-massage-image.jpg" alt="massage" style="width:100%" class="img-thumbnail"/></div>
+    <img src="assets/images/studio-counselling-room-image.jpg" alt="counselling" style="width:100%" class="img-thumbnail"/></div>
     </div>
 </div>
 </div>
@@ -78,11 +78,11 @@
 <section id="bio">
   <h2>Proprietor Bio</h2>
    <div class="row">
-  <div class="col-md-6">
+<div class="col-md-4">
+<img src="assets/images/proprietor-image-a.jpg" alt="proprietor-image-a" style="width:100%" class="img-thumbnail"/></div>
+<div class="col-md-8">
 <p>Rachael, owner of Studiofettle. Health and wellbeing. Rachael, owner of Studiofettle. Health and wellbeing. Rachael, owner of Studiofettle. Health and wellbeing.</p>
 </div>
-<div class="col-md-6">
-<p>Image</p>
 </div>
 </div>
     </section>
