--- a/join-us.html
+++ b/join-us.html
@@ -50,8 +50,8 @@
 <div class="row">
 <div class="col-md-12">
       <h1>Studiofettle - Mind & Body Studio</h1> 
-      <h3>Fettle</h3>
-      <p id="paragraph-size-specific">"meaning working order" and "optimal state of wellbeing"</p>
+      <h3>Join us on your journey</h3>
+      <p id="paragraph-size-specific">"Be good to yourself" and "we'll work together"</p>
 </div>
 </div>
     </section>
@@ -64,7 +64,7 @@
     <div class="column">
     <img src="assets/images/studio-yoga-image.jpg" alt="yoga" style="width:100%" class="img-thumbnail"/></div>
     <div class="column">
-    <img src="assets/images/studio-massage-image.jpg" alt="massage" style="width:100%" class="img-thumbnail"/></div>
+    <img src="assets/images/studio-counselling-room-image.jpg" alt="counselling" style="width:100%" class="img-thumbnail"/></div>
     </div>
 </div>
 </div>
