tidied up html comments, added gallery and find us here sections

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 </header>
 
-<!-- 1st section - company name -->
+<!-- 1st section - company name / philosophy-->
 
 <section id="title">
 <div class="row">
@@ -57,6 +57,7 @@
     </section>
 
     <!-- 2nd section - company images -->
+
 <section id="images">
     <div class="container">
     <div class="row">
@@ -109,7 +110,15 @@
 </div>
     </section>
 
-</body> 
+<!-- 5th section - find us here -->
+
+<section id="Find-us-here">
+<div class="row">
+<div class="col-md-12">
+      <h2>Find us here</h2> 
+    </div>
+    </div>
+    </section> 
    
 <!-- Footer - Contact details -->
 
