--- a/join-us.html
+++ b/join-us.html
@@ -44,7 +44,7 @@
 
 </header>
 
-<!-- 1st section - company name -->
+<!-- 1st section - company name / philosophy -->
 
 <section id="title">
 <div class="row">
@@ -55,6 +55,8 @@
 </div>
 </div>
     </section>
+
+    <!-- 2nd section - company images -->
 
     <section id="images">
     <div class="container">
@@ -70,8 +72,65 @@
 </div>
     </section>
 
-<!-- Join Us - Call to action form -->
+<!-- 3rd section - Join Us -->
 
+<section id="join-us">
+<div class="row">
+<div class="col-md-12">
+      <h2>Join Us</h2> 
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+
+        Condimentum lacinia quis vel eros donec ac odio tempor orci. Diam ut venenatis tellus in metus vulputate eu. Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+        
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+
+        Condimentum lacinia quis vel eros donec ac odio tempor orci. Diam ut venenatis tellus in metus vulputate eu.</p>
+    </div>
+    </div>
+    </section>
+
+<!-- 4th section - call to action form -->
+
+    <form>
+  <div class="row">
+    <div class="col">
+      <input type="text" class="form-control" placeholder="First name">
+    </div>
+    <div class="col">
+      <input type="text" class="form-control" placeholder="Last name">
+</div>
+  </div>
+
+      <div class="row">
+    <div class="col">
+      <input type="text" class="form-control" placeholder="Telephone">
+    </div>
+    <div class="col">
+      <input type="text" class="form-control" placeholder="Email Address">
+    </div>
+  </div>
+</form>
+
+<!-- 5th section - find us here -->
+
+<section id="gallery">
+<div class="row">
+<div class="col-md-12">
+      <h2>Gallery</h2> 
+    </div>
+    </div>
+    </section> 
+
+    <!-- 6th section - gallery -->
+
+<section id="find-us-here">
+<div class="row">
+<div class="col-md-12">
+      <h2>Find us here</h2> 
+    </div>
+    </div>
+    </section> 
+   
 
   
 <!-- Footer - Contact details -->
