--- a/our-services.html
+++ b/our-services.html
@@ -44,7 +44,7 @@
 
 </header>
 
-<!-- 1st section - company name -->
+<!-- 1st section - company name / philosophy -->
 
 <section id="title">
 <div class="row">
@@ -56,7 +56,7 @@
 </div>
     </section>
 
-    <!-- 1st section - Proprietor Bio -->
+    <!-- 2nd section - company images -->
 
 
     <section id="images">
@@ -73,7 +73,7 @@
 </div>
     </section>
 
-
+<!-- 3rd section - Proprietor Bio -->
 
 <section id="bio">
   <h2>Proprietor Bio</h2>
@@ -87,7 +87,7 @@
 </div>
     </section>
 
-    <!-- 2nd section - services - row 1 -->
+    <!-- 4th section - services - row 1 -->
 
   <section id="services">
   <h2>Our Services</h2>
@@ -106,7 +106,7 @@
 </div>
 </div>
 
-<!-- 2nd section - services - row 1 -->
+<!-- 4th section - services - row 2 -->
 
 <div class="row">
 <div class="col-md-3">
@@ -123,6 +123,16 @@
 </div>
 </div>
     </section>  
+
+<!-- 5th section - find us here -->
+
+ <section id="Find-us-here">
+<div class="row">
+<div class="col-md-12">
+      <h2>Find us here</h2> 
+    </div>
+    </div>
+    </section>    
 
     <!-- Footer - Contact details -->
 
