added copyright symbol and comments

--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
     <div class="column">
     <h4>Address</h4>
        <p>Wilton Road, Humberston</p>
-       <p>NE Lincs, DN31 XXX</p>
+       <p>NE Lincs, DN31 2JF</p>
   </div>
   <div class="column">
     <h4>Contact Details</h4>
-    <p>Tel: 01472 xxxxxx</p>
+    <p>Tel: 01472 1234</p>
     <p>Email: studiofettle@info.co.uk</p>
   </div>
   <div class="column">
@@ -143,7 +143,7 @@
 </div>
         </footer>
 
-        <footer>copyright: vixwebdesigns.co.uk</footer>
+        <footer><p>&copy;2020 vixwebdesigns.co.uk</p></footer>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
