saving file only

--- a/index.html
+++ b/index.html
@@ -143,6 +143,8 @@
 </div>
         </footer>
 
+<!-- Copyright Footer - syntax from w3schools.com -->
+
         <footer><p>&copy;2020 vixwebdesigns.co.uk</p></footer>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
