--- a/our-services.html
+++ b/our-services.html
@@ -156,6 +156,8 @@
 </div>
 </div>
         </footer>
+        
+<!-- Copyright Footer - syntax from w3schools.com -->
 
         <footer><p>&copy;2020 vixwebdesigns.co.uk</p></footer>
 
