added underline css, added container to navbar

--- a/join-us.html
+++ b/join-us.html
@@ -49,7 +49,7 @@
 <section id="title">
 <div class="row">
 <div class="col-md-12">
-      <h1>Studiofettle - Mind & Body Studio</h1> 
+      <h1>Studiofettle Mind & Body Studio</h1> 
       <h3>Join us on your journey</h3>
       <p id="paragraph-size-specific">"Be good to yourself" and "we'll work together"</p>
 </div>
