--- a/our-services.html
+++ b/our-services.html
@@ -49,7 +49,7 @@
 <section id="title">
 <div class="row">
 <div class="col-md-12">
-      <h1>Studiofettle - Mind & Body Studio</h1> 
+      <h1>Studiofettle Mind & Body Studio</h1> 
       <h3>Time for you</h3>
       <p id="paragraph-size-specific">"take time to rest your mind" and "care for your body"</p>
 </div>
@@ -156,7 +156,7 @@
 </div>
 </div>
         </footer>
-        
+
 <!-- Copyright Footer - syntax from w3schools.com -->
 
         <footer><p>&copy;2020 vixwebdesigns.co.uk</p></footer>
