--- a/our-services.html
+++ b/our-services.html
@@ -74,18 +74,33 @@
     </section>
 
 <!-- 3rd section - Proprietor Bio -->
+<!-- 3rd section - Bootstrap Carousel -->
 
 <section id="bio">
   <h2>Proprietor Bio</h2>
    <div class="row">
 <div class="col-md-4">
-<img src="assets/images/proprietor-image-a.jpg" alt="proprietor-image-a" style="width:100%" class="img-thumbnail"/></div>
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+        <img src="assets/images/proprietor-image-a.jpg" class="d-block w-100" alt="proprietor-image-a">
+    </div>
+    <div class="carousel-item">
+      <img src="assets/images/proprietor-image-c.jpg" class="d-block w-100" alt="proprietor-image-c">
+    </div>
+    <div class="carousel-item">
+      <img src="assets/images/proprietor-image-b.jpg" class="d-block w-100" alt="proprietor-image-b">
+    </div>
 <div class="col-md-8">
-<p>Rachael, owner of Studiofettle. Health and wellbeing. Rachael, owner of Studiofettle. Health and wellbeing. Rachael, owner of Studiofettle. Health and wellbeing.</p>
+<p id="bio-write-up">Rachael, owner of Studiofettle. Health and wellbeing. Rachael, owner of Studiofettle. Health and wellbeing. Rachael, owner of Studiofettle. Health and wellbeing.</p>
+</div>
+</div>
 </div>
 </div>
 </div>
     </section>
+
+
 
     <!-- 4th section - services - row 1 -->
 
