--- a/our-services.html
+++ b/our-services.html
@@ -79,7 +79,7 @@
 <section id="bio">
   <h2>Proprietor Bio</h2>
    <div class="row">
-<div class="col-md-4">
+<div class="col-md-6">
 <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -91,11 +91,17 @@
     <div class="carousel-item">
       <img src="assets/images/proprietor-image-b.jpg" class="d-block w-100" alt="proprietor-image-b">
     </div>
-<div class="col-md-8">
-<p id="bio-write-up">Rachael, owner of Studiofettle. Health and wellbeing. Rachael, owner of Studiofettle. Health and wellbeing. Rachael, owner of Studiofettle. Health and wellbeing.</p>
-</div>
-</div>
-</div>
+  </div>
+  </div>
+  </div>
+<div class="col-md-6">
+<p>Rachael, owner of Studiofettle. Health and wellbeing. Rachael, owner of Studiofettle. Health and wellbeing. 
+
+   Rachael, owner of Studiofettle. Health and wellbeing. Rachael, owner of Studiofettle. Health and wellbeing.</p>
+
+<p>Rachael, owner of Studiofettle. Health and wellbeing. Rachael, owner of Studiofettle. Health and wellbeing. 
+
+   Rachael, owner of Studiofettle. Health and wellbeing. Rachael, owner of Studiofettle. Health and wellbeing.</p>
 </div>
 </div>
     </section>
