committing due to and initialization issue and not sure things saved

--- a/join-us.html
+++ b/join-us.html
@@ -51,7 +51,7 @@
 <div class="col-md-12">
       <h1>Studiofettle Mind & Body Studio</h1> 
       <h3>Join us on your journey</h3>
-      <p id="paragraph-size-specific">"Be good to yourself"  "we'll work together"</p>
+      <p id="paragraph-size-specific">"Be good to yourself" and "we'll work together"</p>
 </div>
 </div>
     </section>
@@ -108,6 +108,13 @@
     <div class="col">
       <input type="text" class="form-control" placeholder="Email Address">
     </div>
+  </div>
+
+  <div class="form-group">
+    <label for="exampleFormControlTextarea1">Send us a message</label>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+  </div>
+  </div>
   </div>
 </form>
 
