--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <!-- 1st section - company name / philosophy-->
 
-<section id="title">
+<section>
 <div class="row">
 <div class="col-md-12">
       <h1>Studiofettle Mind & Body Studio</h1> 
