wrote Join Us paragraph

--- a/join-us.html
+++ b/join-us.html
@@ -78,13 +78,7 @@
 <div class="row">
 <div class="col-md-12">
       <h2>Join Us</h2> 
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-
-        Condimentum lacinia quis vel eros donec ac odio tempor orci. Diam ut venenatis tellus in metus vulputate eu. Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-        
-        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-
-        Condimentum lacinia quis vel eros donec ac odio tempor orci. Diam ut venenatis tellus in metus vulputate eu.</p>
+      <p>We welcome your interest in Studiofettle. Please use the form to start your journey.</p>
     </div>
     </div>
     </section>
