--- a/join-us.html
+++ b/join-us.html
@@ -78,7 +78,7 @@
 <div class="row">
 <div class="col-md-12">
       <h2>Join Us</h2> 
-      <p>We welcome your interest in Studiofettle. Please use the form to start your journey.</p>
+      <p>We welcome your interest in Studiofettle. Please message us to start your journey.</p>
     </div>
     </div>
     </section>
@@ -105,7 +105,7 @@
   </div>
 
   <div class="form-group">
-    <label for="exampleFormControlTextarea1">Send us a message</label>
+    <label for="exampleFormControlTextarea1">Message us and we will be in touch.</label>
     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
   </div>
   </div>
