added 2 client images for testimonials in assets and index.html

--- a/index.html
+++ b/index.html
@@ -98,13 +98,14 @@
 <p id="testimonials">Jess: Truly amazing - "I love the atmosphere at Studiofettle, it makes you feel happy whatever service you take"</p>
 </div>
 <div class="col-md-3">
-<p>Image</p>
+<img src="assets/images/client-1-pexels-photo-3545784.jpeg" alt="client-1" style="width:100%" class="img-thumbnail"/></div>
 </div>
 <div class="col-md-3">
 <p id="testimonials">Sharon: I feel alive - "Everytime I leave from my PT session, I feel confident and full of energy"</p>
 </div>
 <div class="col-md-3">
-<p>Image</p>
+<img src="assets/images/client-2-pexels-photo-774909.jpeg" alt="client-2" style="width:100%" class="img-thumbnail"/></div>
+</div>
 </div>
 </div>
 </div>
