removed underline on fettle

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <div class="row">
 <div class="col-md-12">
       <h1>Studiofettle Mind & Body Studio</h1> 
-      <h3 id="underline">Fettle</h3>
+      <h3>Fettle</h3>
       <p id="paragraph-size-specific">"meaning working order" and "optimal state of wellbeing"</p>
 </div>
 </div>
