added button to join us page

--- a/join-us.html
+++ b/join-us.html
@@ -107,6 +107,7 @@
   <div class="form-group">
     <label for="exampleFormControlTextarea1">Message us and we will be in touch.</label>
     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    <button type="button" class="btn btn-success">Success</button>
   </div>
   </div>
   </div>
