--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
 
 <!-- Logo and Navbar -->
 
+
 <header>
-<div class="container">
+<div class="container-fliud">
 <div class="row">
-<a href="index.html" class="col-md-6 logo"></a>
+<a href="index.html" class="col-sm-6 col-md-4 col-lg-3 logo"></a>
 <div class="col-md-6">
 <div class="col heading">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
