made changes to header, navbar moved, colors changed but logo now missing

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
 <header>
-<div class="container-fliud">
+<div class="container-fluid">
 <div class="row">
 <a href="index.html" class="col-sm-6 col-md-4 col-lg-3 logo"></a>
 <div class="col-md-6">
