--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <header>
 <div class="container-fluid">
 <div class="row">
-<a href="index.html" class="col-sm-6 col-md-4 col-lg-3 logo"></a>
-<div class="col-md-6">
+<a href="index.html" class=col-xs-12 col-sm-6 col-md-4 col-lg-3></a>
+<div class="col-xs-12">
 <div class="col heading">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="index.html">Studiofettle</a>
