css changes nothing specific just testing stuff

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <header>
 <div class="container-fluid">
 <div class="row">
-<a href="index.html" class=col-xs-12 col-sm-6 col-md-4 col-lg-3></a>
+<a href="index.html" class="col-xs-12 col-sm-6 col-md-4 col-lg-3"></a>
 <div class="col-xs-12">
 <div class="col heading">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -44,14 +44,27 @@
 </nav>
 </header>
 
+<!--section-logo-->
+
+<section id="logo">
+<div class="container">
+<div class="row">
+<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3"></div>
+<img src="assets/images/studiofettle-logo.jpg"/>
+</div>
+</div>
+</section>
+
 <!-- 1st section - company name / philosophy-->
 
-<section>
+<section id="title">
+<div class="container">
 <div class="row">
 <div class="col-md-12">
       <h1>Studiofettle Mind & Body Studio</h1> 
-      <h3>Fettle</h3>
-      <p id="paragraph-size-specific">"meaning working order" and "optimal state of wellbeing"</p>
+      <h3>Join us on your journey</h3>
+      <p id="paragraph-size-specific">"Be good to yourself" and "we'll work together"</p>
+</div>
 </div>
 </div>
     </section>
