added and moved round images

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <a href="index.html" class="col-xs-12 col-sm-6 col-md-4 col-lg-3"></a>
 <div class="col-xs-12">
 <div class="col heading">
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-sm navbar-light bg-light">
   <a class="navbar-brand" href="index.html">Studiofettle</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -43,17 +43,6 @@
   </div>
 </nav>
 </header>
-
-<!--section-logo-->
-
-<section id="logo">
-<div class="container">
-<div class="row">
-<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3"></div>
-<img src="assets/images/studiofettle-logo.jpg"/>
-</div>
-</div>
-</section>
 
 <!-- 1st section - company name / philosophy-->
 
@@ -77,9 +66,9 @@
     <div class="column">
     <img src="assets/images/studio-massage-image.jpg" alt="massage" style="width:100%" class="img-thumbnail"/></div>
     <div class="column">
-    <img src="assets/images/studio-yoga-image.jpg" alt="yoga" style="width:100%" class="img-thumbnail"/></div>
+    <img src="assets/images/studiofettle-logo.jpg" alt="logo" style="width:100%" class="img-thumbnail"/></div>
     <div class="column">
-    <img src="assets/images/studio-counselling-room-image.jpg" alt="counselling" style="width:100%" class="img-thumbnail"/></div>
+    <img src="assets/images/studio-yoga-image.jpg" alt="yoga" style="width:100%" class="img-thumbnail"/></div>
     </div>
 </div>
 </div>
