--- a/join-us.html
+++ b/join-us.html
@@ -63,11 +63,11 @@
     <div class="container">
     <div class="row">
     <div class="column">
-    <img src="assets/images/studio-massage-image.jpg" alt="massage" style="width:100%" class="img-thumbnail"/></div>
+    <img src="assets/images/woman-pexels-photo-917653.jpeg" alt="woman" style="width:100%" class="img-thumbnail"/></div>
     <div class="column">
-    <img src="assets/images/studio-yoga-image.jpg" alt="yoga" style="width:100%" class="img-thumbnail"/></div>
+    <img src="assets/images/studiofettle-logo.jpg" alt="logo" style="width:100%" class="img-thumbnail"/></div>
     <div class="column">
-    <img src="assets/images/studio-counselling-room-image.jpg" alt="counselling" style="width:100%" class="img-thumbnail"/></div>
+    <img src="assets/images/pregnancy-pexels-photo-396133.jpeg" alt="pregnancy" style="width:100%" class="img-thumbnail"/></div>
     </div>
 </div>
 </div>
