--- a/our-services.html
+++ b/our-services.html
@@ -62,9 +62,9 @@
     <div class="container">
     <div class="row">
     <div class="column">
-    <img src="assets/images/studio-massage-image.jpg" alt="massage" style="width:100%" class="img-thumbnail"/></div>
+    <img src="assets/images/yoga-service-image.jpg" alt="yoga-service" style="width:100%" class="img-thumbnail"/></div>
     <div class="column">
-    <img src="assets/images/studio-yoga-image.jpg" alt="yoga" style="width:100%" class="img-thumbnail"/></div>
+    <img src="assets/images/studiofettle-logo.jpg" alt="logo" style="width:100%" class="img-thumbnail"/></div>
     <div class="column">
     <img src="assets/images/studio-counselling-room-image.jpg" alt="counselling" style="width:100%" class="img-thumbnail"/></div>
     </div>
