changed header, realised container-fluid class need to be in header tag

--- a/index.html
+++ b/index.html
@@ -17,12 +17,10 @@
 <!-- Logo and Navbar -->
 
 
-<header>
-<div class="container-fluid">
-<div class="row">
-<a href="index.html" class="col-xs-12 col-sm-6 col-md-4 col-lg-3"></a>
-<div class="col-xs-12">
-<div class="col heading">
+<header class="container-fluid">
+<div class="row" class="col-6 bg-col-main">
+</div>
+<div class="col-6 bg-col-main">
 <nav class="navbar navbar-expand-sm navbar-light bg-light">
   <a class="navbar-brand" href="index.html">Studiofettle</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
