--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 
 <body>
 
-<!-- Logo and Navbar -->
-
+<!-- Navbar -->
 
 <header class="container-fluid">
 <div class="row" class="col-6 bg-col-main">
