--- a/our-services.html
+++ b/our-services.html
@@ -14,23 +14,20 @@
 
 <body>
 
-<!-- Logo and Navbar -->
+<!-- Navbar -->
 
-<header>
-<div class="container-fluid">
-<div class="row">
-<a href="index.html" class="col-xs-12 col-sm-6 col-md-4 col-lg-3"></a>
-<div class="col-xs-12">
-<div class="col heading">
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="index.html">Studiofettle</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+<header class="container-fluid">
+<div class="row" class="col-6 bg-col-main">
+</div>
+<div class="col-6 bg-col-main">
+<nav class="navbar navbar-expand-sm navbar-light bg-light">
+   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html">About Us<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="our-services.html">Our Services</a>
@@ -42,6 +39,7 @@
   </div>
 </nav>
 </header>
+
 
 <!-- 1st section - company name / philosophy -->
 
