--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 
 <!-- 1st section - company name / philosophy-->
 
-<section id="title">
+<section id="company-name">
 <div class="container">
 <div class="row">
 <div class="col-md-12">
       <h1>Studiofettle Mind & Body Studio</h1> 
-      <h3>Join us on your journey</h3>
-      <p id="paragraph-size-specific">"Be good to yourself" and "we'll work together"</p>
+      <h3>Fettle</h3>
+      <p id="paragraph-size-specific">"meaning working order" and "optimal state of wellbeing"</p>
 </div>
 </div>
 </div>
