added company-name to all 3 pages id attribute in section tag in first section

--- a/our-services.html
+++ b/our-services.html
@@ -43,7 +43,7 @@
 
 <!-- 1st section - company name / philosophy -->
 
-<section id="title">
+<section id="company-name">
 <div class="row">
 <div class="col-md-12">
       <h1>Studiofettle Mind & Body Studio</h1> 
