--- a/join-us.html
+++ b/join-us.html
@@ -43,7 +43,7 @@
 
 <!-- 1st section - company name / philosophy -->
 
-<section id="title">
+<section id="company-name">
 <div class="container">
 <div class="row">
 <div class="col-md-12">
