repeated the last commit action in our-services page

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 <section id="images">
     <div class="container">
     <div class="row">
-    <div class="column">
+    <div class="col-sm-12 col-md-4">
     <img src="assets/images/studio-massage-image.jpg" alt="massage" style="width:100%" class="img-thumbnail"/></div>
-    <div class="column">
+    <div class="col-sm-12 col-md-4">
     <img src="assets/images/studiofettle-logo.jpg" alt="logo" style="width:100%" class="img-thumbnail"/></div>
-    <div class="column">
+    <div class="col-sm-12 col-md-4">
     <img src="assets/images/studio-yoga-image.jpg" alt="yoga" style="width:100%" class="img-thumbnail"/></div>
     </div>
 </div>
