--- a/our-services.html
+++ b/our-services.html
@@ -57,15 +57,14 @@
 
     <!-- 2nd section - company images -->
 
-
     <section id="images">
     <div class="container">
     <div class="row">
-    <div class="column">
+    <div class="col-sm-12 col-md-4">
     <img src="assets/images/yoga-service-image.jpg" alt="yoga-service" style="width:100%" class="img-thumbnail"/></div>
-    <div class="column">
+    <div class="col-sm-12 col-md-4">
     <img src="assets/images/studiofettle-logo.jpg" alt="logo" style="width:100%" class="img-thumbnail"/></div>
-    <div class="column">
+    <div class="col-sm-12 col-md-4">
     <img src="assets/images/studio-counselling-room-image.jpg" alt="counselling" style="width:100%" class="img-thumbnail"/></div>
     </div>
 </div>
