--- a/join-us.html
+++ b/join-us.html
@@ -60,11 +60,11 @@
     <section id="images">
     <div class="container">
     <div class="row">
-    <div class="column">
+    <div class="col-sm-12 col-md-4">
     <img src="assets/images/woman-pexels-photo-917653.jpeg" alt="woman" style="width:100%" class="img-thumbnail"/></div>
-    <div class="column">
+    <div class="col-sm-12 col-md-4">
     <img src="assets/images/studiofettle-logo.jpg" alt="logo" style="width:100%" class="img-thumbnail"/></div>
-    <div class="column">
+    <div class="col-sm-12 col-md-4">
     <img src="assets/images/pregnancy-pexels-photo-396133.jpeg" alt="pregnancy" style="width:100%" class="img-thumbnail"/></div>
     </div>
 </div>
