--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <div class="container">
 <div class="row">
 <div class="col-md-12">
-      <h1>Studiofettle Mind & Body Studio</h1> 
+      <h1 class="studiofettle">Studiofettle Mind & Body Studio</h1> 
       <h3>Fettle</h3>
       <p id="paragraph-size-specific">"meaning working order" and "optimal state of wellbeing"</p>
 </div>
