added .studiofettle to h1 in our-services

--- a/our-services.html
+++ b/our-services.html
@@ -47,7 +47,7 @@
 <div class="container">
 <div class="row">
 <div class="col-md-12">
-      <h1>Studiofettle Mind & Body Studio</h1> 
+      <h1 class="studiofettle">Studiofettle Mind & Body Studio</h1> 
       <h3>Time for you</h3>
       <p id="paragraph-size-specific">"take time to rest your mind" and "care for your body"</p>
 </div>
