--- a/join-us.html
+++ b/join-us.html
@@ -47,7 +47,7 @@
 <div class="container">
 <div class="row">
 <div class="col-md-12">
-      <h1>Studiofettle Mind & Body Studio</h1> 
+      <h1 class="studiofettle">Studiofettle Mind & Body Studio</h1> 
       <h3>Join us on your journey</h3>
       <p id="paragraph-size-specific">"be good to yourself" and "we'll work together"</p>
 </div>
