copied footer from index.html to join-us.html

--- a/join-us.html
+++ b/join-us.html
@@ -127,23 +127,24 @@
 <footer>
     <div class="container">
     <div class="row">
-    <div class="column">
+    <div class="col-sm-12 col-md-4">
     <h4>Address</h4>
        <p>Wilton Road, Humberston</p>
        <p>NE Lincs, DN31 2JF</p>
   </div>
-  <div class="column">
+  <div class="col-sm-12 col-md-4">
     <h4>Contact Details</h4>
-    <p>Tel: 01472 12345</p>
+    <p>Tel: 01472 1234</p>
     <p>Email: studiofettle@info.co.uk</p>
   </div>
-  <div class="column">
+  <div class="col-sm-12 col-md-4">
     <h4>Social Media</h4>
     <a href="https://www.facebook.com/studiofettle/" i class="fab fa-facebook-square" style="font-size:48px"></i></a>
   </div>
 </div>
 </div>
         </footer>
+
 
 <!-- Copyright Footer - syntax from w3schools.com -->
 
