--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
     <div class="container">
     <div class="row">
     <div class="col-sm-12 col-md-4">
-    <img src="assets/images/studio-massage-image.jpg" alt="massage" style="width:100%" class="img-thumbnail"/></div>
+    <img src="assets/images/studio-massage-image.jpg" alt="massage" class="img-thumbnail"/></div>
     <div class="col-sm-12 col-md-4">
-    <img src="assets/images/studiofettle-logo.jpg" alt="logo" style="width:100%" class="img-thumbnail"/></div>
+    <img src="assets/images/studiofettle-logo.jpg" alt="logo" class="img-thumbnail"/></div>
     <div class="col-sm-12 col-md-4">
-    <img src="assets/images/studio-yoga-image.jpg" alt="yoga" style="width:100%" class="img-thumbnail"/></div>
+    <img src="assets/images/studio-yoga-image.jpg" alt="yoga" class="img-thumbnail"/></div>
     </div>
 </div>
 </div>
