--- a/our-services.html
+++ b/our-services.html
@@ -61,11 +61,11 @@
     <div class="container">
     <div class="row">
     <div class="col-sm-12 col-md-4">
-    <img src="assets/images/yoga-service-image.jpg" alt="yoga-service" style="width:100%" class="img-thumbnail"/></div>
+    <img src="assets/images/yoga-service-image.jpg" alt="yoga-service" class="img-thumbnail"/></div>
     <div class="col-sm-12 col-md-4">
-    <img src="assets/images/studiofettle-logo.jpg" alt="logo" style="width:100%" class="img-thumbnail"/></div>
+    <img src="assets/images/studiofettle-logo.jpg" alt="logo" class="img-thumbnail"/></div>
     <div class="col-sm-12 col-md-4">
-    <img src="assets/images/studio-counselling-room-image.jpg" alt="counselling" style="width:100%" class="img-thumbnail"/></div>
+    <img src="assets/images/studio-counselling-room-image.jpg" alt="counselling" class="img-thumbnail"/></div>
     </div>
 </div>
 </div>
