removed inline style from images section join-us

--- a/join-us.html
+++ b/join-us.html
@@ -61,11 +61,11 @@
     <div class="container">
     <div class="row">
     <div class="col-sm-12 col-md-4">
-    <img src="assets/images/woman-pexels-photo-917653.jpeg" alt="woman" style="width:100%" class="img-thumbnail"/></div>
+    <img src="assets/images/woman-pexels-photo-917653.jpeg" alt="woman" class="img-thumbnail"/></div>
     <div class="col-sm-12 col-md-4">
-    <img src="assets/images/studiofettle-logo.jpg" alt="logo" style="width:100%" class="img-thumbnail"/></div>
+    <img src="assets/images/studiofettle-logo.jpg" alt="logo" class="img-thumbnail"/></div>
     <div class="col-sm-12 col-md-4">
-    <img src="assets/images/pregnancy-pexels-photo-396133.jpeg" alt="pregnancy" style="width:100%" class="img-thumbnail"/></div>
+    <img src="assets/images/pregnancy-pexels-photo-396133.jpeg" alt="pregnancy" class="img-thumbnail"/></div>
     </div>
 </div>
 </div>
