removed inline styling in footer for facebook icon, add id tag and placed in CSS

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   </div>
   <div class="col-sm-12 col-md-4">
     <h4>Social Media</h4>
-    <a href="https://www.facebook.com/studiofettle/" i class="fab fa-facebook-square" style="font-size:48px"></i></a>
+    <a href="https://www.facebook.com/studiofettle/" i class="fab fa-facebook-square" id="fb-font-size"></i></a>
   </div>
 </div>
 </div>
