added separate container for bio-title

--- a/our-services.html
+++ b/our-services.html
@@ -74,10 +74,17 @@
 <!-- 3rd section - Proprietor Bio -->
 <!-- 3rd section - Bootstrap Carousel -->
 
-<section id="bio">
-     <div class="row">
-<div class="col-md-6">
+<section id="bio title">
+<div class="container">
+<div class="row">
+<div class="col-md-12">
 <h2>Proprietor Bio</h2>
+</section>
+
+<section id="bio">
+<div class="container">
+     <div class="row">
+<div class="col-sm-6 col-md-6">
 <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -92,7 +99,7 @@
   </div>
   </div>
   </div>
-<div class="col-md-6">
+<div class="col-sm-6 col-md-6">
 <p>Rachael, owner of Studiofettle. Health and wellbeing. Rachael, owner of Studiofettle. Health and wellbeing. 
 
    Rachael, owner of Studiofettle. Health and wellbeing. Rachael, owner of Studiofettle. Health and wellbeing.</p>
